# polydiff

./: .gitignore  README.md  pyproject.toml  test.ml
configs/: README.md  sample_diffusion.yaml  study_architecture_noise_sweep.yaml  study_distribution_fidelity.yaml  study_guidance_characterization.yaml  study_minimum_high_honors.yaml  study_pocket_fit_conditioning.yaml  study_polygon_guidance_pooling.yaml  study_surrogate_guidance_pooling.yaml  train_diffusion.yaml  train_guidance_model.yaml  train_surrogate_guidance_model.yaml
data/: .gitignore  README.md
docs/: blog_post.md  future.md  pocket_fit_conditioning_study.md  polydiff_thesis_strength_plan.md  restoration_analogue.md  restoration_prototype_value.md  thesis_diagram_suggestions.md  thesis_experiment_pack.md  variable_size_pipeline.md
models/: README.md  train_metrics.jsonl
notebooks/: README.md  compare_polygon_distributions copy 2.ipynb  compare_polygon_distributions copy.ipynb  compare_polygon_distributions.ipynb  compare_polygon_distributions_gat_guided_no_glob_feats copy.ipynb  evaluate_guidance_model.ipynb  exploration.ipynb  training_diagnostics.ipynb
polydiff/: __init__.py  paths.py  restoration.py  runs.py
predict_binding_affinity/: .gitignore  __init__.py  guidance_wrapper_fixed.ipynb  guidance_wrapper_ligand_context.ipynb  predict_binding_affinity.ipynb  predict_binding_affinity.py  predict_binding_affinity_no_pocket.ipynb  pyproject.toml  surrogate_data.py  surrogate_models.py  train_surrogate_model.py
pretrained_models/: README.md
scripts/: run_study.py  sample_diffusion.py  (+2 more)
(+53 files in other folders)
