[project]
name = "moment"
version = "0.1.0"
description = ""
authors = [
    {name = "Jerenemy",email = "jzay@wesleyan.edu"}
]
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
    "e3nn (>=0.5.8,<0.6.0)",
    "torch-geometric (>=2.7.0,<3.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "h5py (>=3.15.1,<4.0.0)",
    "torch (>=2.9.1,<3.0.0)",
    "rdkit (>=2025.9.2,<2026.0.0)",
    "lmdb (>=1.7.5,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
